class Equipment {

    constructor(id, name) {
        this.id = id
        this.name = name
    }

}

module.exports = Equipment
