class Item {
    constructor(id, name, price, user) {
        this.id = id
        this.name = name
        this.price = price
        this.user = user
    }
}

module.exports = Item
